<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="poilist_title">@string/appname</string>
    <string name="poilist_menu_settings">Settings</string>
    <string name="error_server_response">Error obtaining data from the server</string>

    <string name="poidetail_title" />

</resources>
