<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/main_toolbar"
        layout="@layout/view_toolbar" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_nav_host"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="fragment_nav_host"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

</androidx.appcompat.widget.LinearLayoutCompat>